# spyne-ide

./: .dockerignore  .env.example  .env.template  .gitignore  .structure  ADVANCED_METADATA_COMPLETE_GUIDE.md  ARCHITECTURE.md  ARD_SLICE_MINI_PASSBOOK_PROCESSING.md  CODE_STANDARDS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_LOGIC.md  COMPLEX_TEST_SETUP.md  COMPLIANCE_REPORT.md  CREDENTIALS_FINAL_RESULTS.md  CREDENTIALS_TEST_RESULTS.md  Cargo.toml  DUMMY_DATA_CREATED.md  ENV_CREDENTIALS.md  EXAMPLES.md  FINAL_RCA_ASSESSMENT.md  HYPERGRAPH_INTEGRATED.md  HYPERGRAPH_INTEGRATION_SUMMARY.md  HYPERGRAPH_QUICK_REF.md  HYPERGRAPH_VISUALIZER_INTEGRATION.md  HYPERGRAPH_VISUAL_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  INSTALL_POSTGRES_MACOS.md  LOAD_AND_TEST_RESULTS.md  MCP_INTEGRATION_COMPLETE.md  MCP_INTEGRATION_GUIDE.md  METADATA_ONLY_ARCHITECTURE.md  MIGRATION_COMPLETE.md  PGADMIN_CONNECTION_FIX.md  POSTGRES_IMPLEMENTATION_STATUS.md  POSTGRES_MIGRATION_PLAN.md  POSTGRES_SETUP_GUIDE.md  POSTGRES_STATUS.md  POSTGRES_TROUBLESHOOTING.md  PROJECT_DOCUMENTATION.md  QUERY_PLANNER_METADATA_GAP_ANALYSIS.md  (+96 more)
.cargo/: config.toml  config.toml.backup
KnowledgeBase/: semantic_sync.rs
WorldState/: contract.rs
airflow/dags/: document_retrieval_dag.py
backend/: Dockerfile  __init__.py  app_production.py  cko_client.py  create_tpch_metadata.py  enterprise_pipeline.py  gunicorn.conf.py  hybrid_knowledge_retriever.py  join_learner.py  knowledge_graph.py  knowledge_metadata_api.py  knowledge_register_rules.py  llm_query_generator.py  metadata_provider.py  multi_stage_pipeline.py  node_level_metadata_accessor.py  node_registry_client.py  orchestrator.py  query_regeneration_api.py  requirements.txt  rust_sql_client.py  server.js  sql_builder.py  sql_completion.py  start_dev.sh  start_production.sh
backend/agentic/: orchestrator.py
backend/ai_sql_system/: API_KEY_CONFIGURED.md  ARCHITECTURE.md  CHECKLIST.md  DEBUG_API_KEY.md  (+21 more)
components/KnowledgeBase/: Cargo.toml  api_server.rs  business_term_resolver.rs  concepts.rs  contract_extractor.rs  mod.rs  rules.rs  semantic_resolver.rs  timezone_rules.json  types.rs  vector_store.rs
components/KnowledgeBase/src/: main.rs
components/WorldState/: Cargo.toml  aliases.rs  contract.rs  keys.rs  knowledge_integration.rs  lineage.rs  mod.rs  policies.rs  quality.rs  reconciliation.rs  rules.rs  schema.rs  source_registry.rs  stats.rs  types.rs
components/hypergraph-visualizer/backend/: Cargo.toml
config/: config.yaml  document_mapping.yaml  pipeline_config.yaml  prometheus.yml  rag_config.yaml
data/: temp_er_diagram.json
database/: schema.sql  schema_advanced_planner.sql  schema_enterprise_safety.sql  schema_uploads.sql
docker/: Dockerfile  Dockerfile.frontend  Dockerfile.rust  docker-compose.dev.yml.example  docker-compose.yml
docs/: AZURE_AD_SETUP.md  BOTH_CATALOGS_WORK.md  CHANGELOG.md  CKO_INVARIANTS.md  CLARIFICATION_API_GUIDE.md  CLARIFICATION_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CREDENTIALS_MIGRATION.md  DATA_ENTRY_GUIDE.md  DOCKER.md  END_TO_END_PIPELINE.md  ENTERPRISE_SAFETY_IMPLEMENTATION.md  ENVIRONMENT_SETUP.md  EXECUTION_PLAN.md  FEEDBACK_ASSESSMENT_AND_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  INTEGRATION_STATUS.md  JOIN_FIX_SUMMARY.md  LLM_SQL_GENERATION_PIPELINE.md  OVERVIEW.md  PERMISSIVE_MODE.md  PRODUCTION_FEATURES_CHECKLIST.md  PRODUCTION_READINESS.md  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  RISK_MITIGATION_SUMMARY.md  SETUP.md  SHIP_READY_CHECKLIST.md  TPCDS_METADATA.md  TPCDS_SETUP.md  TPCDS_TROUBLESHOOTING.md  TRINO_COLUMN_NAMING_FIX.md  VERIFICATION_REPORT.md
examples/: ard_example.json  er_diagram_example.json  prd_example.json  trd_example.json
frontend/: .dockerignore  index.html  package-lock.json  package.json  vite.config.ts
hypergraph-visualizer/: README.md
metadata/: business_labels.json  entities.json  exceptions.json  identity.json  knowledge_base.json  lineage.json  metrics.json  rules.json  semantic_registry.json  tables.json  time.json
rust/: __init__.py  agent_prompts.rs  agentic_prompts.rs  agentic_reasoner.rs  ambiguity.rs  chunking.py  config.py  confluence_ingest.py  confluence_mcp_adapter.py  confluence_mcp_integrator.py  confluence_to_knowledge_base.py  data_assistant.rs  data_engineering.rs  data_utils.rs  de_executor.rs  diff.rs  document_mapper.py  drilldown.rs  engine.py  execution_engine.rs  execution_planner.rs  explain.rs  explainability.rs  faiss_fuzzy_matcher.rs  goal_directed_explorer.rs  grain_resolver.rs  granularity_understanding.rs  graph.rs  graph_traversal.rs  hybrid_reasoner.rs  identity.rs  ingest.py  intelligent_rule_builder.rs  intelligent_rule_parser.rs  intent_compiler.rs  intent_validator.rs  join_inference.rs  knowledge_base.rs  knowledge_hints.rs  knowledge_register_sync.py  (+32 more)
scripts/: extract_tpcds_schema.py  fix_vendor_checksums.py  load_metadata.sh  test_tpcds.sh  verify_trino_catalogs.sh
src/: __init__.py  ambiguity.rs  chunking.py  config.py  confluence_mcp_adapter.py  confluence_mcp_integrator.py  confluence_slack_mcp_integrator.py  confluence_to_knowledge_base.py  data_assistant.rs  diff.rs  document_mapper.py  drilldown.rs  error.rs  explain.rs  fuzzy_matcher.rs  grain_resolver.rs  graph.rs  graph_adapter.rs  graph_traversal.rs  identity.rs  ingest.py  intelligent_rule_parser.rs  knowledge_hints.rs  knowledge_register_sync.py  lib.rs  llm.rs  main.rs  metadata.rs  one_shot_runner.rs  operators.rs  pipeline.py  pipeline_api.py  product_index.py  python_bindings.rs  query_engine.rs  rca.rs  rule_compiler.rs  rule_reasoner.rs  slack_mcp_adapter.py  slack_mcp_integrator.py  (+4 more)
tests/: integration_test.rs  test_auth_integration.py  test_complex_multi_table_reconciliation.rs  test_contract_store.py  test_grain_mismatch_reconciliation.rs  test_learning_system.py  test_metadata_provider.py  test_observability.py  test_query_validator.py  test_real_world_dummy.rs  test_sql_completion.py  test_table_store.py
ui/: package-lock.json  package.json  vite.config.ts
(+343 files in other folders)
