[package]
name = "rca-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data processing
polars = { version = "0.40", features = ["lazy", "temporal", "strings", "csv", "parquet", "json"] }
arrow = { version = "57", features = [] }

# LLM client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = "0.4"
regex = "1"
itertools = "0.12"
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "ansi"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Environment variables
dotenv = "0.15"

