[package]
name = "rca-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data processing
polars = { version = "0.40", features = ["lazy", "temporal", "strings", "csv", "parquet", "json"] }
arrow = { version = "57", features = [] }

# LLM client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
itertools = "0.12"
uuid = { version = "1.0", features = ["v4"] }
strsim = "0.11"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "ansi"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Environment variables
dotenv = "0.15"

# CSV parsing for ingestion
csv = "1.3"

# Lazy static for global variables
lazy_static = "1.4"

# HTTP server for UI - using tokio directly (no external HTTP framework needed)

# Hypergraph module dependencies  
dashmap = "7.0.0-rc2"
# Note: bincode and zstd are optional - only needed for compression features
# bincode = "1.3"
# zstd = "0.13"

[[bin]]
name = "server"
path = "src/bin/server.rs"

