[package]
name = "spyne-ide"
version = "2.0.0"
edition = "2021"

[lib]
name = "spyne_ide"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Data processing
polars = { version = "0.40", features = ["lazy", "temporal", "strings", "csv", "parquet", "json", "sql"] }
arrow = { version = "57", features = [] }

# LLM client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
itertools = "0.12"
uuid = { version = "1.0", features = ["v4"] }
strsim = "0.11"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono", "ansi"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Environment variables
dotenv = "0.15"

# CSV parsing for ingestion
csv = "1.3"

# Lazy static for global variables
lazy_static = "1.4"

# Database and caching for learning store
rusqlite = { version = "0.31", features = ["bundled"] }

# Async traits
async-trait = "0.1"

# DuckDB support
# To enable DuckDB:
# 1. Install DuckDB via Homebrew: brew install duckdb
# 2. Uncomment the line below:
# duckdb = { version = "0.10", features = ["bundled"] }
# For now, DuckDB engine uses Polars as fallback

# Trino client (using HTTP REST API)
# Note: We'll use reqwest (already in dependencies) for Trino REST API

# HTTP server for UI - using tokio directly (no external HTTP framework needed)

# Python bindings (PyO3) - Optional, only needed for Python bindings
# Note: PyO3 not in vendor - will be fetched from crates.io when needed
# Uncomment when ready to build Python bindings:
# pyo3 = { version = "0.20", features = ["auto-initialize"] }

# HTTP server for NodeRegistry - using tokio directly (no axum needed)
# axum, tower, tower-http removed - using tokio-based HTTP server instead

# Hypergraph module dependencies  
dashmap = "7.0.0-rc2"
# Note: bincode and zstd are optional - only needed for compression features
# bincode = "1.3"
# zstd = "0.13"

# PostgreSQL support
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"], default-features = false }

# SQL parser for query profiling
sqlparser = "0.39"

# Vector database optimization - HNSW for approximate nearest neighbor search
# To add: Download from https://github.com/rusty-celery/hnsw-rs and add to vendor/
# Then uncomment:
# hnsw = "0.5"
# Note: Using serde_json (already in dependencies) for persistence instead of bincode
# LRU cache for embeddings  
# lru = "0.12"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# Removed binary definitions for files that don't exist:
# - load_tables_data.rs
# - load_scf_data.rs  
# - create_test_tables.rs
# - test_db_connection.rs

[[bin]]
name = "migrate_metadata"
path = "src/bin/migrate_metadata.rs"

[[bin]]
name = "node_registry_server"
path = "src/bin/node_registry_server.rs"

