[package]
name = "knowledge-base"
version = "0.1.0"
edition = "2021"

[lib]
name = "knowledge_base"
path = "mod.rs"

[[bin]]
name = "kb-api-server"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"  # For fuzzy matching (Jaro-Winkler)
anyhow = "1"     # For error handling in optional modules
axum = "0.7"     # For REST API server
tokio = { version = "1", features = ["full"] }  # Async runtime
tower = "0.4"    # HTTP middleware
tower-http = { version = "0.5", features = ["cors"] }  # CORS support

[features]
default = []
semantic-resolution = []  # Enable modules that require external schema registry

